--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "caching",
   "description": "Easier caching in node.js",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "author": "Mathias Pettersson <mape@mape.me>",
   "engines": [
     "node"
@@ -17,8 +17,9 @@
     }
   ],
   "dependencies": {
-    "hiredis" : ">=0.1.12",
-    "redis": ">=0.6.7"
+    "hiredis": ">=0.1.12",
+    "redis": ">=0.6.7",
+    "hashring": "~1.0.3"
   },
   "devDependencies": {
     "expresso": "~0.8.1"
