--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "caching",
-  "description": "Easier caching in node.js",
-  "version": "0.2.0",
+  "description": "Easier caching in node.js. Now with consistent hashing.",
+  "version": "0.2.1",
   "author": "Mathias Pettersson <mape@mape.me>",
   "contributors": [
     {
@@ -21,12 +21,12 @@
     "url": "http://github.com/wilsonodk/node-caching"
   },
   "dependencies": {
-    "hiredis": ">=0.1.12",
-    "redis": ">=0.6.7",
-    "hashring": "~1.0.3"
+    "hiredis": "0.1.12",
+    "redis": "0.6.7",
+    "hashring": "1.0.3"
   },
   "devDependencies": {
-    "expresso": "~0.8.1"
+    "expresso": "0.8.1"
   },
   "scripts": {
     "test": "expresso"
