--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     {
       "name": "Wilson Wise",
       "email": "wilson.wise@turner.com"
+    },
+    {
+      "name": "James Young",
+      "email": "james.young@turner.com"
     }
   ],
   "engines": {
@@ -18,15 +22,15 @@
   "main": "./lib/caching",
   "repository": {
     "type": "git",
-    "url": "http://github.com/wilsonodk/node-caching"
+    "url": "http://bitbucket.org/vgtf/node-caching"
   },
   "dependencies": {
-    "hiredis": "0.1.16",
-    "redis": "0.10.0",
-    "hashring": "1.0.3"
+    "hashring": "3.1.0",
+    "hiredis": "0.2.0",
+    "redis": "0.12.1"
   },
   "devDependencies": {
-    "expresso": "0.8.1"
+    "expresso": "0.9.2"
   },
   "scripts": {
     "test": "expresso"
