--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,6 @@
 ; This file is for unifying the coding style for different editors and IDEs.
 ; More information at http://editorconfig.org
 
-; Refer to the README for setup instructions
-
 root = true
 
 [*]
@@ -13,8 +11,14 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.json]
-indent_size = 2
+[*.go]
+indent_style = tab
 
 [*.md]
 trim_trailing_whitespace = false
+
+[bower.json]
+indent_size = 2
+
+[package.json]
+indent_size = 2
