--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "caching",
+  "name": "cnn-caching",
   "description": "Easier caching in node.js. Now with consistent hashing.",
-  "version": "0.4.0",
-  "author": "Mathias Pettersson <mape@mape.me>",
-  "contributors": [
-    {
-      "name": "Wilson Wise",
-      "email": "wilson.wise@turner.com"
-    },
-    {
-      "name": "James Young",
-      "email": "james.young@turner.com"
-    }
-  ],
-  "engines": {
-    "node": ">=0.10"
-  },
+  "version": "0.5.0",
+  "main": "./lib/caching",
   "directories": {
     "lib": "./lib"
-  },
-  "main": "./lib/caching",
-  "repository": {
-    "type": "git",
-    "url": "http://bitbucket.org/vgtf/node-caching"
-  },
-  "dependencies": {
-    "hashring": "3.2.0",
-    "hiredis": "0.4.1",
-    "redis": "2.4.2"
-  },
-  "devDependencies": {
-    "expresso": "0.9.2"
   },
   "scripts": {
     "test": "expresso"
   }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cnnlabs/cnn-caching"
+  },
+  "bugs": {
+    "url": "https://github.com/cnnlabs/cnn-caching/issues"
+  },
+  "homepage": "https://github.com/cnnlabs/cnn-caching#readme",
+  "engines": {
+    "node": ">=4.3.1"
+  },
+  "dependencies": {
+    "hashring": "3.2.0",
+    "hiredis": "0.4.1",
+    "redis": "2.5.3"
+  },
+  "devDependencies": {
+    "expresso": "0.9.2"
+  },
+  "keywords": [
+    "cnn",
+    "cnnlabs",
+    "caching",
+    "cache",
+    "redis"
+  ],
+  "license": "MIT"
 }
