--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "redis": "2.5.3"
   },
   "devDependencies": {
-    "expresso": "0.9.2"
+    "expresso": "0.9.2",
+    "nock": "7.5.0"
   },
   "keywords": [
     "cnn",
