--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "dependencies": {
     "hashring": "3.2.0",
     "hiredis": "0.4.1",
-    "redis": "2.5.3"
+    "redis": "2.6.0-1"
   },
   "devDependencies": {
     "expresso": "0.9.2",
-    "nock": "7.5.0"
+    "nock": "8.0.0"
   },
   "keywords": [
     "cnn",
