--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "cnn-caching",
   "description": "Easier caching in node.js. Now with consistent hashing.",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "main": "./lib/caching",
   "directories": {
     "lib": "./lib"
   },
   "scripts": {
+    "generate-authors": "tools/generate-authors.sh",
+    "generate-changelog": "changelog-maker --group",
     "test": "expresso"
   },
   "repository": {
@@ -26,6 +28,7 @@
     "redis": "2.6.2"
   },
   "devDependencies": {
+    "changelog-maker": "2.2.3",
     "expresso": "0.9.2",
     "nock": "8.0.0"
   },
